# yet-another-datamoshing-script

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: main.cpp
